Updates from Overleaf

--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -2594,3 +2594,299 @@ Guanjie Zheng, Yuanhao Xiong, Xinshi Zang, Jie Feng, Hua Wei, Huichu Zhang, Yong
   year      = {2019},
 }
 }
+
+
+@article{bharadwaj2017impact,
+  title={Impact of congestion on greenhouse gas emissions for road transport in Mumbai metropolitan region},
+  author={Bharadwaj, Shashank and Ballare, Sudheer and Chandel, Munish K and others},
+  journal={Transportation research procedia},
+  volume={25},
+  pages={3538--3551},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@incollection{cools2013self,
+  title={Self-organizing traffic lights: A realistic simulation},
+  author={Cools, Seung-Bae and Gershenson, Carlos and D’Hooghe, Bart},
+  booktitle={Advances in applied self-organizing systems},
+  pages={45--55},
+  year={2013},
+  publisher={Springer}
+}
+
+
+@inproceedings{nishi2018traffic,
+  title={Traffic Signal Control Based on Reinforcement Learning with Graph Convolutional Neural Nets},
+  author={Nishi, Tomoki and Otaki, Keisuke and Hayakawa, Keiichiro and Yoshimura, Takayoshi},
+  booktitle={2018 21st International Conference on Intelligent Transportation Systems (ITSC)},
+  pages={877--883},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{little1981maxband,
+  title={MAXBAND: A versatile program for setting signals on arteries and triangular networks},
+  author={Little, John DC and Kelson, Mark D and Gartner, Nathan H},
+  year={1981},
+  publisher={Alfred P. Sloan School of Management, Massachusetts Institute of Technology}
+}
+
+@article{grote2016including,
+  title={Including congestion effects in urban road traffic CO2 emissions modelling: Do Local Government Authorities have the right options?},
+  author={Grote, Matt and Williams, Ian and Preston, John and Kemp, Simon},
+  journal={Transportation Research Part D: Transport and Environment},
+  volume={43},
+  pages={95--106},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@book{ abelson-et-al:scheme,
+  author = "Harold Abelson and Gerald~Jay Sussman and Julie Sussman",
+  title = "Structure and Interpretation of Computer Programs",
+  publisher = "MIT Press",
+  address = "Cambridge, Massachusetts",
+  year = "1985"
+}
+
+
+@article{van2016coordinated,
+  title={Coordinated deep reinforcement learners for traffic light control},
+  author={Van der Pol, Elise and Oliehoek, Frans A},
+  journal={Proceedings of Learning, Inference and Control of Multi-Agent Systems (at NIPS 2016)},
+  year={2016}
+}
+
+@book{Roess2011t,
+  title={Traffic Engineering},
+  author={Roess, Roger P and Prassas, Elena S and Mcshane, William R},
+  publisher={Pearson/Prentice Hall},
+  year={2011},
+}
+
+@article{arel2010reinforcement,
+  title={Reinforcement learning-based multi-agent system for network traffic signal control},
+  author={Arel, Itamar and Liu, Cong and Urbanik, T and Kohls, AG},
+  journal={IET Intelligent Transport Systems},
+  volume={4},
+  number={2},
+  pages={128--135},
+  year={2010},
+  publisher={IET}
+}
+
+@inproceedings{ElAb12,
+  title={Multi-agent reinforcement learning for integrated network of adaptive traffic signal controllers (MARLIN-ATSC)},
+  author={El-Tantawy, Samah and Abdulhai, Baher},
+  booktitle={Intelligent Transportation Systems (ITSC), 2012 15th International IEEE Conference on},
+  pages={319--326},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{SBPB+06,
+  title={Improving reinforcement learning with context detection},
+  author={Silva, Bruno Castro Da and Basso, Eduardo W. and Perotto, Filipo Studzinski and Bazzan, Ana L. C. and Engel, Paulo Martins},
+  booktitle={International Joint Conference on Autonomous Agents and Multiagent Systems},
+  year={2006},
+}
+
+
+@article{EAA13,
+  title={Multiagent reinforcement learning for integrated network of adaptive traffic signal controllers (MARLIN-ATSC): methodology and large-scale application on downtown Toronto},
+  author={El-Tantawy, Samah and Abdulhai, Baher and Abdelgawad, Hossam},
+  journal={IEEE Transactions on Intelligent Transportation Systems},
+  volume={14},
+  number={3},
+  pages={1140--1150},
+  year={2013},
+  publisher={IEEE}
+}
+
+@incollection{DrSt06,
+  title={Multiagent traffic management: Opportunities for multiagent learning},
+  author={Dresner, Kurt and Stone, Peter},
+  booktitle={Learning and Adaption in Multi-Agent Systems},
+  pages={129--138},
+  year={2006},
+  publisher={Springer}
+}
+
+@inproceedings{Wier00,
+  title={Multi-agent reinforcement learning for traffic light control},
+  author={Wiering, MA},
+  booktitle={Machine Learning: Proceedings of the Seventeenth International Conference (ICML'2000)},
+  pages={1151--1158},
+  year={2000}
+}
+
+@misc{WVVK04-2,
+  title={Intelligent traffic light control},
+  author={Wiering, MA and Veenen, J van and Vreeken, Jilles and Koopman, Arne},
+  year={2004},
+  publisher={Utrecht University: Information and Computing Sciences}
+}
+
+@inproceedings{wei2018intellilight,
+  title={Intellilight: A reinforcement learning approach for intelligent traffic light control},
+  author={Wei, Hua and Zheng, Guanjie and Yao, Huaxiu and Li, Zhenhui},
+  booktitle={Proceedings of the 24th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  pages={2496--2505},
+  year={2018},
+  organization={ACM}
+}
+
+@inproceedings{KWBV08,
+  title={Multiagent reinforcement learning for urban traffic control using coordination graphs},
+  author={Kuyer, Lior and Whiteson, Shimon and Bakker, Bram and Vlassis, Nikos},
+  booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  pages={656--671},
+  year={2008},
+  organization={Springer}
+}
+
+@article{PraB11,
+author = {Prashanth, L A and Bhatnagar, Shalabh},
+doi = {10.1109/ITSC.2011.6082823},
+isbn = {978-1-4577-2197-7},
+issn = {2153-0009},
+journal = {2011 14th International IEEE Conference on Intelligent Transportation Systems (ITSC)},
+pages = {1640--1645},
+title = {{Reinforcement learning with average cost for adaptive control of traffic lights at intersections}},
+year = {2011}
+}
+
+@incollection{varaiya2013max,
+  title={The max-pressure controller for arbitrary networks of signalized intersections},
+  author={Varaiya, Pravin},
+  booktitle={Advances in Dynamic Network Modeling in Complex Transportation Systems},
+  pages={27--66},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{maxpressure14,
+author = {Kouvelas, Anastasios and Lioris, Jennie and Fayazi, S. Alireza and Varaiya, Pravin},
+doi = {10.3141/2421-15},
+issn = {0361-1981},
+journal = {Transportation Research Record: Journal of the Transportation Research Board},
+mendeley-groups = {Multi-intersection},
+number = {1},
+pages = {133--141},
+title = {{Maximum Pressure Controller for Stabilizing Queues in Signalized Arterial Networks}},
+volume = {2421},
+year = {2014}
+}
+
+@inproceedings{gupta2017cooperative,
+  title={Cooperative multi-agent control using deep reinforcement learning},
+  author={Gupta, Jayesh K and Egorov, Maxim and Kochenderfer, Mykel},
+  booktitle={International Conference on Autonomous Agents and Multiagent Systems},
+  pages={66--83},
+  year={2017},
+  organization={Springer}
+}
+
+
+@techreport{hunt1981scoot,
+  title={SCOOT-a traffic responsive method of coordinating signals},
+  author={Hunt, PB and Robertson, DI and Bretherton, RD and Winton, RI},
+  year={1981}
+}
+
+
+@article{lowrie1990scats,
+  title={Scats, sydney co-ordinated adaptive traffic system: A traffic responsive method of controlling urban traffic},
+  author={Lowrie, PR},
+  year={1990}
+}
+
+
+@techreport{koonce2008traffic,
+  title={Traffic signal timing manual.},
+  author={Koonce, Peter and Rodegerdts, Lee},
+  year={2008},
+  institution={United States. Federal Highway Administration}
+}
+
+@inproceedings{ bgf:Lixto,
+  author = "Robert Baumgartner and Georg Gottlob and Sergio Flesca",
+  title = "Visual Information Extraction with {Lixto}",
+  booktitle = "Proceedings of the 27th International Conference on Very Large Databases",
+  pages = "119--128",
+  publisher = "Morgan Kaufmann",
+  address = "Rome, Italy",
+  month = "September",
+  year = "2001"
+}
+
+@article{ brachman-schmolze:kl-one,
+  author = "Ronald~J. Brachman and James~G. Schmolze",
+  title = "An overview of the {KL-ONE} knowledge representation system",
+  journal = "Cognitive Science",
+  volume = "9",
+  number = "2",
+  pages = "171--216",
+  month = "April--June",
+  year = "1985"
+}
+
+@article{ gottlob:nonmon,
+  author = "Georg Gottlob",
+  title = "Complexity results for nonmonotonic logics",
+  journal = "Journal of Logic and Computation",
+  volume = "2",
+  number = "3",
+  pages = "397--425",
+  month = "June",
+  year = "1992"
+}
+
+@article{ gls:hypertrees,
+  author = "Georg Gottlob and Nicola Leone and Francesco Scarcello",
+  title = "Hypertree Decompositions and Tractable Queries",
+  journal = "Journal of Computer and System Sciences",
+  volume = "64",
+  number = "3",
+  pages = "579--627",
+  month = "May",
+  year = "2002"
+}
+
+@article{ levesque:functional-foundations,
+  author = "Hector~J. Levesque",
+  title = "Foundations of a functional approach to knowledge representation",
+  journal = "Artificial Intelligence",
+  volume = "23",
+  number = "2",
+  pages = "155--212",
+  month = "July",
+  year = "1984"
+}
+
+@inproceedings{ levesque:belief,
+  author = "Hector~J. Levesque",
+  title = "A logic of implicit and explicit belief",
+  booktitle = "Proceedings of the Fourth National Conference on Artificial Intelligence",
+  publisher = "American Association for Artificial Intelligence",
+  pages = "198--202",
+  address = "Austin, Texas",
+  month = "August",
+  year = "1984"
+}
+
+@article{ nebel:jair-2000,
+  author = "Bernhard Nebel",
+  title = "On the compilability and expressive power of propositional planning formalisms",
+  journal = "Journal of Artificial Intelligence Research",
+  volume = "12",
+  pages = "271--315",
+  year = "2000"
+}
+
+ @misc{proceedings,
+  author = {{IJCAI Proceedings}},
+  title = {{IJCAI} Camera Ready Submission},
+  howpublished = {\url{https://proceedings.ijcai.org/info}},
+}
