--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -7,7 +7,7 @@ In the European Union, the cost of traffic congestion was equivalent to 1\% of t
 Mitigating congestion would have significant economic, environmental and societal benefits.
 Signalized intersections are one of the most prevalent bottleneck types in urban environments, and thus traffic signal control plays a vital role in urban traffic management.
 
-\begin{figure}[]
+\begin{figure}[htbp]
 \centering
 \includegraphics[width=0.99\textwidth]{figures/timing.pdf} 
 \caption{Traffic signal timing in a city. The cycle length rarely changes.}
